@@ -1,3 +1,11 @@
+2020-08-24  Charlie Zender  <zender@uci.edu>
+
+	* NCO 4.9.4-alpha15 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha15: Madelines';git push
+	git tag -a 4.9.4-alpha15 -m '';git push --tags
+
+	* Start to utilize tpd=0 for monthly mean data
+
 2020-08-23  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.4-alpha14 release procedure:
